# haskell-v8

./: .gitignore  README.mkd  Setup.hs  configure  v8.cabal
cbits/: haskell-v8.cpp  haskell-v8.h
cbits/include/: haskell-v8-common.h
scripts/: build-deps.sh
src/: V8.hs  V8.hsc
