-- This file was based on haskell's binding to libcurl:
-- https://github.com/GaloisInc/curl/blob/master/curl.cabal
name:               v8
version:            3.23.6.1
synopsis:           Haskell binding to the v8 javascript engine
description:
    V8 is a google's super-fast javascript engine. It is the engine powering
    google chrome and node.js.

    This package provides a haskell-friendly interface to V8, making it easy 
    for haskell programs to use javascript as an embedded language.
category:           Language
license:            MIT
license-file:       LICENSE-MIT
author:             Thiago de Arruda <tpadilha84@gmail.com>
build-type:         Configure
cabal-version:      >= 1.6

flag new-base
  Description: Build with new smaller base library
  Default: False

library
  Exposed-modules:  V8
  hs-source-dirs:   src
  c-sources:        cbits/haskell-v8.cpp
  Extra-libraries:  v8 pthread rt
  Extensions:       ForeignFunctionInterface
  Ghc-options:      -Wall

  Build-Depends: base
  if flag(new-base)
    Build-depends: base >= 3 && < 5, containers
  else
    Build-depends: base < 3

source-repository head
  type:     git
  location: https://github.com/tarruda/haskell-v8.git
